static/style.css
* {
    font-family: sans-serif;
}

button {
    padding: 5px;
    font-size: 1rem;
}

input[type='text'] {
    padding: 7px;
}

input[type='password'] {
    padding: 7px;
}

.gauge {
    background: #dfdfdf;
    padding: 5px;
    padding-left: 10px;
    padding-right: 10px;
    border-radius: 10px;
}

.gauge p {
    text-transform: uppercase;
    font-size: 1rem;
    color: dimgray;
}

.gauge h2 {
    font-weight: bold;
}

.top-bar {
    width: 100%;
    box-shadow: #0c13212d 0px 0px 5px 5px;
    padding: 5px;
    display: flex;
    justify-content: space-between;
    position: fixed;
    top: 0;
    background: white;

}
.top-bar p {
    margin-top: auto;
    margin-bottom: auto
}

.metrics-board {
    gap: 10px;
    padding: 10px;
    display: grid;
    grid-template-columns: 1fr 1fr;
}

@media screen and (min-width: 740px) {
    .metrics-board {
        grid-template-columns: 1fr 1fr 1fr 1fr;
    }

    .entry-card-action-btn {
        display: flex; flex-direction: column; gap: 10px
    }

    .entry-card {
            align-items: center;
    }
}

@media screen and (max-width: 740px) {
    .metrics-board {
        grid-template-columns: 1fr 1fr;
    }
    .entry-card-action-btn {
        right: 0;
        display: flex; flex-direction: row; gap: 10px;
    }

    .entry-card {
        flex-direction: column;
        align-items: flex-start;
    }

    .entry-card-img {
        display: none;
    }

}

.card-container {
    display: flex;
    flex-direction: column;
    gap: 10px;
    position: absolute;
    top:150px;
    padding: 10px;
    padding-top: 0px;
    width: 100%;
}

.entry-card {
    display: flex;
    width: 100%;
    gap:10px;
    border-radius: 10px;
    border: 1px solid lightgray;
    padding: 10px;

}

.card-info-entry {
    margin-bottom: 0px;
}

.card-info {
    flex-grow: 1;
}

.accented-indicator {
    color: var(--primary)
}

.accented-green {
    color: var(--green)
}

.accented-purple {
    color: var(--purple);
}

.accented-danger {
    color: var(--danger)
}



.hidden {
    display: none;
}

